MODON MRE BPDEV/force-app/main/default/objects/UAEDDS_Code__mdt/UAEDDS_Code__mdt.object-meta.xml
<CustomObject>
    <label>UAEDDS Code</label>
    <pluralLabel>UAEDDS Codes</pluralLabel>
</CustomObject>