MODON MRE BPDEV/force-app/main/default/objects/UAEDDS_Code__mdt/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>The code exactly as UAEDDS sends it. Payment reason codes are a single character, including the digits 0 and 1.</description>
    <label>Code</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>