MODON MRE BPDEV/force-app/main/default/objects/UAEDDS_Code__mdt/fields/Code_Type__c.field-meta.xml
<CustomField>
    <fullName>Code_Type__c</fullName>
    <description>Which vocabulary the code belongs to. The four are separate namespaces and must never be merged: ACCP means Active as a DDA status and Accepted as a payment status, and the same letter can appear in more than one list.</description>
    <label>Code Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DDA Status</fullName>
            </value>
            <value>
                <fullName>Payment Status</fullName>
            </value>
            <value>
                <fullName>DDA Reject Code</fullName>
            </value>
            <value>
                <fullName>Payment Reason Code</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>