MODON MRE BPDEV/force-app/main/default/objects/UAEDDS_Code__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Plain language meaning, transcribed from the vendor REST contract v2.0. This is what the collections team reads instead of a raw code.</description>
    <label>Description</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>